fix(youtube): detect yt-dlp bootstrap extraction failures
Run a --version preflight before downloads, classify PyInstaller stderr, route yt-dlp TEMP/TMP to habitv-home/tmp/yt-dlp, and upgrade failure messages when the binary cannot start.

Co-authored-by: Cursor <cursoragent@cursor.com>